common/cinny/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cinny
  namespace: cinny
  labels:
    app.kubernetes.io/name: cinny
    app.kubernetes.io/instance: cinny
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: cinny
      app.kubernetes.io/instance: cinny
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cinny
        app.kubernetes.io/instance: cinny
    spec:
      volumes:
        - name: cinny-static
          configMap:
            name: cinny-static
      containers:
        - name: cinny
          image: ghcr.io/cinnyapp/cinny:v4.12.7
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: cinny-static
              mountPath: /usr/share/nginx/html/config.json
              subPath: config.json
            # - name: cinny-static
            #   mountPath: /usr/share/nginx/html/manifest.json
            #   subPath: manifest.json
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
