common/cinny/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cinny
  namespace: cinny
  labels:
    app.kubernetes.io/name: cinny
    app.kubernetes.io/instance: cinny
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cinny
    app.kubernetes.io/instance: cinny
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
